RESOLVED FIXED229904
[iOS] Play/pause button's icon does not update when pausing in full screen
https://bugs.webkit.org/show_bug.cgi?id=229904
Summary [iOS] Play/pause button's icon does not update when pausing in full screen
Peng Liu
Reported 2021-09-03 16:08:06 PDT
[iOS] Play/pause button's icon does not update when pausing in full screen
Attachments
Patch (2.65 KB, patch)
2021-09-03 16:20 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2021-09-03 16:20:14 PDT
Peng Liu
Comment 2 2021-09-03 16:22:26 PDT
EWS
Comment 3 2021-09-04 09:55:19 PDT
Committed r282046 (241346@main): <https://commits.webkit.org/241346@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437323 [details].
Note You need to log in before you can comment on or make changes to this bug.