[iOS] Play/pause button's icon does not update when pausing in full screen https://bugs.webkit.org/show_bug.cgi?id=229904

Reviewed by Eric Carlson.

AVKit expects KVO notification of `rate` to update the play/pause icon.
However, with the changes in r280840, `-[WebAVPlayerController setRate]`
will be called by AVKit only. When a user taps the play/pause button,
`-[WebAVPlayerController setRate:fromJavaScript:]` will be called, which
does not generate the KVO notification.

This patch fixes the issue by manually generate the KVO notification.

To be safe, this patch manually generates the KVO notification for
property `defaultPlaybackRate` as well.

Tested manually.

* platform/ios/WebAVPlayerController.mm:
(-[WebAVPlayerController setDefaultPlaybackRate:fromJavaScript:]):
(-[WebAVPlayerController setRate:fromJavaScript:]):


Canonical link: https://commits.webkit.org/241346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282046 268f45cc-cd09-0410-ab3c-d52691b4dbfc